# ledger-penumbra

./: .gitignore  CMakeLists.txt  Makefile  README.md  proto.mk
.github/workflows/: codeql.yml  main.yml  proto_update.yml
app/: Makefile
app/rust/: Cargo.toml
app/rust/.cargo/: config.toml
app/rust/include/: rslib.h
app/rust/src/: address.rs  bolos.rs  constants.rs  ffi.rs  keys.rs  lib.rs  parser.rs  protobuf_h.rs
app/rust/src/ffi/: asset_id.rs  c_api.rs  keys.rs  sign.rs
app/rust/src/parser/: action.rs  address.rs  amount.rs  backref.rs  balance.rs  bytes.rs  clue_plan.rs  commitment.rs  detection.rs  error.rs  fee.rs  id.rs  memo.rs  note.rs  note_payload.rs  nullifier.rs  parameters.rs  penalty.rs  plans.rs  rk.rs  rseed.rs  swap_ciphertext.rs  swap_payload.rs  swap_plaintext.rs  symmetric.rs  trading_pair.rs  tx_parameters.rs  validator_identity.rs  value.rs
app/rust/src/parser/plans/: action.rs  action_dutch_auction_withdraw.rs  amount.rs  balance.rs  commitment.rs  delegator_vote.rs  id.rs  memo.rs  nullifier.rs  output.rs  position_withdraw.rs  rseed.rs  spend.rs  swap.rs  undelegate_claim.rs  value.rs
app/rust/src/protobuf-h/: any.pb.rs  asset.pb.rs  auction.pb.rs  client.pb.rs  community_pool.pb.rs  decaf377_fmd.pb.rs  decaf377_rdsa.pb.rs  descriptor.pb.rs  dex.pb.rs  distributions.pb.rs  fee.pb.rs  funding.pb.rs  gogo.pb.rs  governance.pb.rs  ibc.pb.rs  keys.pb.rs  num.pb.rs  sct.pb.rs  shielded_pool.pb.rs  stake.pb.rs  tct.pb.rs  timestamp.pb.rs  transaction.pb.rs  txhash.pb.rs
app/rust/src/utils/: prf.rs  protobuf.rs
app/src/: addr.c  apdu_handler.c  coin.h  constants.h  crypto.c  crypto.h  crypto_helper.c  crypto_helper.h  keys_def.h  known_assets.c  memo.c  nv_signature.c  nv_signature.h  parameters.c  parser.c  parser_impl.c  parser_interface.c  parser_interface.h  parser_pb_utils.c  parser_pb_utils.h  parser_txdef.h  spend_plan.c  spend_plan.h  tx_metadata.c  tx_metadata.h  ui_utils.c  ui_utils.h
app/src/c_api/: rust.c
app/src/common/: actions.h  parser.h  parser_common.h  tx.c  tx.h
app/src/nanopb_tiny/: pb.h
app/src/plan/: action_dutch_auction_schedule.c  action_dutch_auction_withdraw.c  delegate.h  delegator_vote.c  delegator_vote.h  ics20_withdrawal.c  ics20_withdrawal.h  output.c  output.h  output_plan.c  position_close.c  position_open.c  position_open.h  spend.c  spend.h  spend_plan.c  spend_plan.h  swap.c  swap.h  undelegate.c  undelegate_claim.c  undelegate_claim.h
app/src/ui/: address_display.c  address_display.h  note.c  note.h
docs/: APDUSPEC.md
fuzz/: fuzz_config.py  parser_parse.cpp  run-fuzz-crashes.py  run-fuzzers.py
tests/: parser_impl.cpp  plan_effect_hash.cpp  plan_effect_hash_testcases.json  testcases.json  ui_tests.cpp
tests_zemu/: package.json
tests_zemu/tests/: common.ts  effect_hash.test.ts  standard.test.ts
tools/proto-bindgen/src/: main.rs
tools/proto-compiler/src/: main.rs
